# plastar

./: .gitignore  LICENSE  pyproject.toml  readme.md  setupy.py
config_files/: config.yaml
examples/: run_plastar.py
examples/emission/: main.py  main_KpVsys.py  scratch.py
examples/emission/config/: planet.yaml  simulation.yaml  star.yaml
examples/transmission/: main.py
examples/transmission/config/: star.yaml  telluric.yaml
examples/transmission/results/TEST_transmission_05-09-2025T17-13-16/: planet.yaml  simulation.yaml  star.yaml
plastar/: ccf.py  ccf_numpy.py  grid.py  planet.py  planet_atmosphere.py  utils.py
plastar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: run_plastar.py  run_sterster.py
